fix css text-align

--- a/app/assets/stylesheets/shampoos.scss
+++ b/app/assets/stylesheets/shampoos.scss
@@ -3,7 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .shampoos {
-  text-align: center;
   margin: auto;
   margin-bottom: 40px;
   border: solid 1px #efefef;
@@ -35,6 +34,12 @@ a {
 
 .image {
   box-shadow: 0px 5px 8px -5px rgba(0, 0, 0, 0.4);
+  text-align: center;
+}
+
+.shampoo-info {
+  text-align: right;
+  padding-right: 30px;
 }
 
 .info {
@@ -48,13 +53,15 @@ a {
 
 .tag {
   color: 003569;
-
+  padding:30px;
 }
 
 .new_tag {
   border-top: 1px #efefef solid;
   padding-bottom: 10px;
   padding-top: 10px;
+  text-align: center;
+
 }
 
 .nav {
